# HEICtoJPG

./: .gitignore  README.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.1.0.md  pyproject.toml
.github/workflows/: build-exe.yml  ci.yml
heictojpg/: __init__.py  __main__.py  app_gui.py  app_main.py  cli.py  config.py  converter.py  gui.py  version.py
licenses/: SOURCE_OFFER.txt  THIRD_PARTY_NOTICES.txt
scripts/: build_exe.ps1  capture_readme_screenshots.py  install_context_menu.ps1  setup_this_pc.ps1  uninstall_context_menu.ps1
tests/: test_app_gui.py  test_cli.py  test_config.py  test_converter.py  test_version.py
