[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "heictojpg"
version = "1.1.0"
description = "Lightweight Windows image converter for JPEG, PNG, and WebP."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "AiWithYou" }
]
dependencies = [
  "Pillow>=10.4",
  "pillow-heif>=0.18",
  "tkinterdnd2>=0.4"
]

[project.optional-dependencies]
dev = [
  "pyinstaller>=6.10",
  "pytest>=8.2",
  "ruff>=0.5",
  "tomli>=2; python_version < '3.11'"
]

[project.scripts]
heictojpg = "heictojpg.cli:main"

[project.gui-scripts]
heictojpg-app = "heictojpg.app_main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["heictojpg*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
